# Generative-AI-using-LangChain

./: .gitignore  pyproject.toml  requirements.txt
generativeAI/: 1-introduction.ipynb  2-tools.ipynb  3-agent_intro.ipynb
